--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,7 +3,7 @@
 @tailwind components;
 @tailwind utilities;
 
-/* Importation des polices Baloo 2 */
+/* Font Baloo2 */
 @font-face {
   font-family: 'Baloo 2';
   src: url('./assets/fonts/Baloo2-Regular.ttf') format('truetype');
@@ -71,17 +71,17 @@
            focus:outline-none focus:ring-2 focus:ring-offset-2;
   }
   
-  /* Styles spécifiques pour Frenz */
+  /* Frenz dsign*/
   .btn-accent {
     @apply w-full bg-[#CCDF5E] text-black py-3 rounded-full font-bold text-lg hover:bg-opacity-90 transition duration-300 font-baloo;
   }
   
-  /* Style pour les inputs */
+  /* Inputs */
   .input-dark {
     @apply w-full px-4 py-3 rounded-lg bg-black text-white border-none focus:outline-none focus:ring-2 focus:ring-[#CCDF5E] font-baloo;
   }
   
-  /* Style pour les conteneurs */
+  /* Conteneurs */
   .auth-container {
     @apply flex justify-center items-center h-screen bg-[#171717];
   }
@@ -98,7 +98,7 @@
     @apply w-full md:w-1/2 bg-[#272626] p-12 flex flex-col items-center justify-center rounded-r-xl;
   }
   
-  /* Style pour le champ téléphone */
+  /* Tél */
   .phone-input {
     @apply flex;
   }
@@ -108,7 +108,7 @@
   }
 }
 
-/* Style pour les champs de saisie */
+/* Champs de saisie */
 input[type="text"],
 input[type="email"],
 input[type="password"],
@@ -116,7 +116,6 @@ input[type="tel"] {
   @apply bg-black text-white rounded-lg border-none focus:outline-none focus:ring-2 focus:ring-[#CCDF5E] font-baloo;
 }
 
-/* Utilitaires supplémentaires */
 .line-clamp-3 {
   display: -webkit-box;
   -webkit-line-clamp: 3;
@@ -124,7 +123,7 @@ input[type="tel"] {
   overflow: hidden;
 }
 
-/* Classe de secours pour la police Baloo 2 */
+
 .font-baloo {
   font-family: 'Baloo 2', sans-serif !important;
 }
