--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -47,8 +47,8 @@
 /* Styles personnalisés */
 @layer base {
   body {
-    @apply font-sans bg-[#171717]; /* Couleur de fond par défaut */
-    font-family: 'Baloo 2', sans-serif; /* Fallback direct en cas de problème avec Tailwind */
+    @apply font-sans bg-[#171717]; 
+    font-family: 'Baloo 2', sans-serif; 
   }
   
   h1 {
@@ -127,8 +127,7 @@ input[type="tel"] {
   font-family: 'Baloo 2', sans-serif !important;
 }
 
-/* Fix pour les pages d'authentification */
-/* Ces styles assurent que le contenu de la page d'auth est toujours affiché correctement, quelle que soit la taille de l'écran */
+/* Adapté tout taille */
 .auth-fixed-container {
   position: fixed;
   top: 0;
