--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -52,7 +52,7 @@
   }
   
   h1 {
-    @apply text-2xl font-bold mb-4;
+    @apply text-2xl font-bold mb-0;
   }
   
   h2 {
@@ -116,6 +116,7 @@ input[type="tel"] {
   @apply bg-black text-white rounded-lg border-none focus:outline-none focus:ring-2 focus:ring-[#CCDF5E] font-baloo;
 }
 
+/* Utilités */
 .line-clamp-3 {
   display: -webkit-box;
   -webkit-line-clamp: 3;
@@ -127,7 +128,7 @@ input[type="tel"] {
   font-family: 'Baloo 2', sans-serif !important;
 }
 
-/* Adapté tout taille */
+/* Containeurs */
 .auth-fixed-container {
   position: fixed;
   top: 0;
@@ -161,6 +162,49 @@ input[type="tel"] {
   justify-content: center;
 }
 
+
+.homepage-scroll::-webkit-scrollbar {
+  width: 6px;
+}
+
+.homepage-scroll::-webkit-scrollbar-track {
+  background: #2d3748;
+}
+
+.homepage-scroll::-webkit-scrollbar-thumb {
+  background-color: #4a5568;
+  border-radius: 3px;
+}
+
+.homepage-scroll::-webkit-scrollbar-thumb:hover {
+  background-color: #718096;
+}
+
+/* Styles pour les sidebars avec scroll */
+.sidebar-scroll {
+  height: calc(100vh - 8rem); 
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+
+.sidebar-scroll::-webkit-scrollbar {
+  width: 6px;
+}
+
+.sidebar-scroll::-webkit-scrollbar-track {
+  background: #2d3748;
+}
+
+.sidebar-scroll::-webkit-scrollbar-thumb {
+  background-color: #4a5568;
+  border-radius: 3px;
+}
+
+.sidebar-scroll::-webkit-scrollbar-thumb:hover {
+  background-color: #718096;
+}
+
+/* RESPONSIVE DESIGN */
 @media (min-width: 768px) {
   .auth-form-container {
     width: 50%;
