--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -128,7 +128,7 @@ input[type="tel"] {
   font-family: 'Baloo 2', sans-serif !important;
 }
 
-/* Containeurs */
+/* Conteneurs */
 .auth-fixed-container {
   position: fixed;
   top: 0;
